--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,11 +27,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-apollo/dist/vue-apollo.js"></script>
     
 
-    
+
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>Simple Spring Boot Graphql</h1>
+          <h1>Simple Spring Boot Graphql By Prashant Bhandari</h1>
         </div>
       </div>
       <div class="row">
@@ -45,9 +45,9 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="query">Query</label>
-                    <textarea class="form-control" id="query" rows="3">
+                    <textarea class="form-control" id="query" rows="8">
 query {
-    allDetails {
+    getAllDetails {
         id
         name
         phone
@@ -84,5 +84,8 @@ query {
         </div>
       </div>
     </div>
+
+
+
   </body>
 </html>
